--- a/index.css
+++ b/index.css
@@ -11,3 +11,11 @@ footer {
     background-color: #414f6a;
     padding: .75rem 0;
 }
+
+main {
+    height: 90vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: white;
+}
