--- a/index.css
+++ b/index.css
@@ -121,6 +121,26 @@ main {
     background-color: #697a98;
 }
 
+/* SCHEDULE TABLE */
+
+.schedule {
+    outline: 1px solid red;
+    background: rgba(255, 255, 255, 0.5);
+    padding: .75rem 2rem;
+}
+
+.schedule h2 {
+    margin: 0;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 2rem;
+    letter-spacing: .1rem;
+    color: #414f6a;
+}
+
+.empty-row {
+    height: 1rem;
+}
+
 /* FOOTER */
 
 footer {
